--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.7",
     "cheerio": "^1.0.0",
     "dotenv": "^16.4.5",
+    "puppeteer": "^23.7.0",
     "winston": "^3.16.0"
   }
 }
